--- a/app/index.html
+++ b/app/index.html
@@ -3,12 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="public/css/global.css">
-    <link rel="stylesheet" href="public/css/smalltalk.min.css">
     <title>Youtube To MP3</title>
   </head>
   <body>
     <div class="root center" id="root"></div>
-    <script src="public/js/bundle.js"></script>
+    <script src="./bundle.js"></script>
   </body>
 </html>
