--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="public/css/global.css">
-    <title>Youtube To MP3</title>
+    <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
     <div class="root center" id="root"></div>
-    <script src="public/js/bundle.js"></script>
   </body>
 </html>
